--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,6 @@
         <module>Chapter2</module>
         <module>Chapter3</module>
         <module>Chapter4</module>
+        <module>Chapter5</module>
     </modules>
 </project>
