Created Chapter 8 structure.

--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,6 @@
         <module>Chapter5</module>
         <module>Chapter6</module>
         <module>Chapter7</module>
+        <module>Chapter8</module>
     </modules>
 </project>
