Created Chapter 11 structure.

--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,6 @@
         <module>Chapter8</module>
         <module>Chapter9</module>
         <module>Chapter10</module>
+        <module>Chapter11</module>
     </modules>
 </project>
